packages/wasm/ballerina-lang-go/parser/testdata/tokens/record/negative/closed_record_mismatch_fields.token
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "main" 4 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "FooError" 8 0x00 ())
(| 1 0x00 ())
(ident, "BarError" 8 0x00 ())
(ident, "e" 1 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "FooError" 8 0x00 ())
(( 1 0x00 ())
(string, ""message"" 9 0x00 ())
(, 1 0x00 ())
(ident, "bar" 3 0x00 ())
(= 1 0x00 ())
(string, ""bar"" 5 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(type 4 0x00 ())
(ident, "FooErrData" 10 0x00 ())
(record 6 0x00 ())
({| 2 0x00 ())
(string 6 0x00 ())
(ident, "foo" 3 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(ident, "message" 7 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "cause" 5 0x00 ())
(? 1 0x00 ())
(; 1 0x00 ())
(|} 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "BarErrData" 10 0x00 ())
(record 6 0x00 ())
({| 2 0x00 ())
(string 6 0x00 ())
(ident, "bar" 3 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(ident, "message" 7 0x00 ())
(? 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "cause" 5 0x00 ())
(? 1 0x00 ())
(; 1 0x00 ())
(|} 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "FooError" 8 0x00 ())
(error 5 0x00 ())
(< 1 0x00 ())
(ident, "FooErrData" 10 0x00 ())
(> 1 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "BarError" 8 0x00 ())
(error 5 0x00 ())
(< 1 0x00 ())
(ident, "BarErrData" 10 0x00 ())
(> 1 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
